<resources>
    <string name="app_name">ClassTune</string>
    <string-array name="free_settings_images">
        <item>about_us</item>
        <item>terms_and_policy</item>

    </string-array>
    <string-array name="free_settings_text">
        <item>About Us</item>
        <item>Terms \u0026 Policy</item>
    </string-array>
    <string-array name="free_settings_images_log_in">
        <item>account_settings</item>
        <item>terms_and_policy</item>
        <item>multiple_lang</item>
        <item>version</item>
    </string-array>
    <string-array name="free_settings_text_log_in">
        <item>Change Password</item>
        <item>Terms \u0026 Policy</item>
        <item>Choose Language</item>
        <item>Current Version: 2.2</item>
    </string-array>
    <string-array name="diary_images_student">
        <item>home</item>
        <item>homework</item>
        <item>classwork</item>
        <item>quiz</item>
        <item>notice</item>
        <item>syllabus</item>
        <item>event</item>
        <item>attendance</item>
        <item>routine</item>
        <item>exam_routine</item>
        <item>reportcard</item>
        <item>academic_calendar</item>
        <item>transport</item>
        <item>lesson_plan</item>

    </string-array>
    <string-array name="diary_class_student">

        <item>SchoolFeedFragment</item>
        <item>HomeworkFragment</item>
        <item>ClassworkFragment</item>
        <item>QuizFragment</item>
        <item>NoticeFragmentNew</item>
        <item>SyllabusFragment</item>
        <item>ParentEventFragment</item>
        <item>ParentAttendenceFragment</item>
        <item>StudentClassRoutineFragment</item>
        <item>ExamRoutineFragmentAll</item>
        <item>ParentReportCardFragment</item>
        <item>ParentAcademicCalender</item>
        <item>TransportFragment</item>
        <item>LessonPlanStudentParent</item>

    </string-array>
    <string-array name="diary_text_student">

        <item>ClassTune Home</item>
        <item>Homework</item>
        <item>Classwork</item>
        <item>Quiz</item>
        <item>Notice</item>
        <item>Syllabus</item>
        <item>Event</item>
        <item>Attendance</item>
        <item>Routine</item>
        <item>Exam Routine</item>
        <item>Report Card</item>
        <item>Academic Calendar</item>
        <item>Transport</item>
        <item>Lesson Plan</item>

    </string-array>
    <string-array name="diary_images_student_free">
        <item>home</item>
        <item>homework</item>
        <item>classwork</item>
        <item>notice</item>
        <item>quiz</item>

        <item>syllabus</item>
        <item>event</item>
        <item>attendance</item>
        <item>routine</item>
        <item>exam_routine</item>
        <item>reportcard</item>
        <item>academic_calendar</item>
        <item>transport</item>
        <item>lesson_plan</item>

    </string-array>
    <string-array name="diary_class_student_free">

        <item>SchoolFeedFragment</item>
        <item>HomeworkFragment</item>
        <item>ClassworkFragment</item>
        <item>NoticeFragmentNew</item>
        <item>QuizFragment</item>

        <item>SyllabusFragment</item>
        <item>ParentEventFragment</item>
        <item>ParentAttendenceFragment</item>
        <item>StudentClassRoutineFragment</item>
        <item>ExamRoutineFragmentAll</item>
        <item>ParentReportCardFragment</item>
        <item>ParentAcademicCalender</item>
        <item>TransportFragment</item>
        <item>LessonPlanStudentParent</item>

    </string-array>
    <string-array name="diary_text_student_free">

        <item>ClassTune Home</item>
        <item>Homework</item>
        <item>Classwork</item>
        <item>Notice</item>
        <item>Quiz</item>

        <item>Syllabus</item>
        <item>Event</item>
        <item>Attendance</item>
        <item>Routine</item>
        <item>Exam Routine</item>
        <item>Reportcard</item>
        <item>Academic Calendar</item>
        <item>Transport</item>
        <item>Lesson Plan</item>

    </string-array>
    <string-array name="diary_images_parents">
        <item>home</item>
        <item>homework</item>
        <item>classwork</item>
        <item>quiz</item>
        <item>notice</item>
        <item>syllabus</item>
        <item>event</item>
        <item>attendance</item>
        <item>routine</item>
        <item>exam_routine</item>
        <item>reportcard</item>
        <item>meetingrequest</item>
        <item>academic_calendar</item>
        <item>transport</item>
        <item>leaveapplication</item>
        <item>fees</item>
        <item>lesson_plan</item>

    </string-array>
    <string-array name="diary_text_parents">
        <item>ClassTune Home</item>
        <item>Homework</item>
        <item>Classwork</item>
        <item>Quiz</item>
        <item>Notice</item>
        <item>Syllabus</item>
        <item>Event</item>
        <item>Attendance</item>
        <item>Routine</item>
        <item>Exam Routine</item>
        <item>Reportcard</item>
        <item>Meeting Request</item>
        <item>Academic Calendar</item>
        <item>Transport</item>
        <item>Leave Application</item>
        <item>Fees</item>
        <item>Lesson Plan</item>

    </string-array>
    <string-array name="diary_class_parents">
        <item>SchoolFeedFragment</item>
        <item>HomeworkFragment</item>
        <item>ClassworkFragment</item>
        <item>QuizFragment</item>
        <item>NoticeFragmentNew</item>
        <item>SyllabusFragment</item>

        <item>ParentEventFragment</item>
        <item>ParentAttendenceFragment</item>
        <item>StudentClassRoutineFragment</item>
        <item>ExamRoutineFragmentAll</item>
        <item>ParentReportCardFragment</item>
        <item>MeetingFragment</item>
        <item>ParentAcademicCalender</item>
        <item>TransportFragment</item>
        <item>ApplyForLeaveFragment</item>
        <item>FeesTabhostFragment</item>
        <item>LessonPlanStudentParent</item>

    </string-array>
    <string-array name="diary_images_parents_free">
        <item>home</item>
        <item>homework</item>
        <item>classwork</item>
        <item>notice</item>
        <item>quiz</item>

        <item>syllabus</item>
        <item>event</item>
        <item>attendance</item>
        <item>routine</item>
        <item>exam_routine</item>
        <item>reportcard</item>
        <item>meetingrequest</item>
        <item>academic_calendar</item>
        <item>transport</item>
        <item>leaveapplication</item>
        <item>fees</item>
        <item>lesson_plan</item>

    </string-array>
    <string-array name="diary_text_parents_free">
        <item>ClassTune Home</item>
        <item>Homework</item>
        <item>Classwork</item>
        <item>Notice</item>
        <item>Quiz</item>

        <item>Syllabus</item>
        <item>Event</item>
        <item>Attendance</item>
        <item>Routine</item>
        <item>Exam Routine</item>
        <item>Report Card</item>
        <item>Meeting Request</item>
        <item>Academic Calendar</item>
        <item>Transport</item>
        <item>Leave Application</item>
        <item>Fees</item>
        <item>Lesson Plan</item>

    </string-array>
    <string-array name="diary_class_parents_free">
        <item>SchoolFeedFragment</item>
        <item>HomeworkFragment</item>
        <item>ClassworkFragment</item>
        <item>NoticeFragmentNew</item>
        <item>QuizFragment</item>

        <item>SyllabusFragment</item>
        <item>ParentEventFragment</item>
        <item>ParentAttendenceFragment</item>
        <item>StudentClassRoutineFragment</item>
        <item>ExamRoutineFragmentAll</item>
        <item>ParentReportCardFragment</item>
        <item>MeetingFragment</item>
        <item>ParentAcademicCalender</item>
        <item>TransportFragment</item>
        <item>ApplyForLeaveFragment</item>
        <item>FeesTabhostFragment</item>
        <item>LessonPlanStudentParent</item>

    </string-array>
    <string-array name="diary_images_teacher">
        <item>home</item>
        <item>attendance</item>
        <item>homework</item>
        <item>classwork</item>
        <item>routine</item>
        <item>exam_routine</item>
        <item>notice</item>
        <item>syllabus</item>
        <item>student_list</item>
        <item>leaveapplication</item>
        <item>meetingrequest</item>
        <item>event</item>
        <item>transport</item>
        <item>reportcard</item>
        <item>academic_calendar</item>
        <item>lesson_plan</item>

    </string-array>
    <string-array name="diary_text_teacher">
        <item>ClassTune Home</item>
        <item>Attendance</item>
        <item>Homework</item>
        <item>Classwork</item>
        <item>Routine</item>
        <item>Exam Routine</item>
        <item>Notice</item>
        <item>Syllabus</item>
        <item>Student List</item>
        <item>Leave Application</item>
        <item>Meeting Request</item>
        <item>Events</item>
        <item>Transport</item>
        <item>Report Card</item>
        <item>Academic Calendar</item>
        <item>Lesson Plan</item>

    </string-array>
    <string-array name="diary_class_teacher">
        <item>SchoolFeedFragment</item>
        <item>TeachersAttendanceTabhostFragment</item>
        <item>TeacherHomeWorkFragment</item>
        <item>TeacherClassWorkFragment</item>
        <item>TeacherRoutineFragment</item>
        <item>ExamRoutineTeacherFragment</item>
        <item>NoticeFragmentNew</item>
        <item>SyllabusFragment</item>
        <item>StudentListFragment</item>
        <item>ApplyForLeaveFragment</item>
        <item>MeetingFragment</item>
        <item>ParentEventFragment</item>
        <item>TransportFragment</item>
        <item>ParentReportCardFragment</item>
        <item>ParentAcademicCalender</item>
        <item>LessonPlanTeacher</item>

    </string-array>
    <string name="btn_cancel">Cancel</string>
    <string name="create_fodler_dialog">Folder Name</string>
    <string name="attachment_dialog_cancel">Cancel</string>
    <string name="popup_layout_homework_assessment_result_txt_subject">Subject</string>
    <string name="popup_layout_meeting_status_btn_deny">Deny</string>
    <string name="popup_layout_meeting_status_btn_accept">Accept</string>
    <string name="leave_application_diolog_layout_title">Leave Application</string>
    <string name="leave_application_diolog_layout_name">Name:</string>
    <string name="leave_application_diolog_layout_start_date">Start Date:</string>
    <string name="leave_application_diolog_layout_end_date">End Date:</string>
    <string name="leave_application_diolog_layout_reason">Reason:</string>
    <string name="row_term_report_score">Score</string>
    <string name="row_term_report_highest">Highest</string>
    <string name="row_term_report_total">Total</string>
    <string name="row_term_report_grade">Grade</string>
    <string name="row_term_report_action">Action</string>
    <string name="dialog_folder_name_txt_error">* Folder must have a name!</string>
    <string name="dialog_folder_name_btn_create">Create</string>
    <string name="fragment_weekly_routine_time">Time</string>
    <string name="fragment_weekly_routine_sat">SAT</string>
    <string name="fragment_weekly_routine_sun">SUN</string>
    <string name="fragment_weekly_routine_mon">MON</string>
    <string name="fragment_weekly_routine_tue">TUE</string>
    <string name="fragment_weekly_routine_wed">WED</string>
    <string name="fragment_weekly_routine_thu">THU</string>
    <string name="java_uihelper_ok">OK</string>
    <string name="java_dialoglanguagechooser_title">Choose your language</string>
    <string name="java_dialoglanguagechooser_lang_english">English</string>
    <string name="java_dialoglanguagechooser_lang_bangla">বাংলা</string>
</resources>