<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/java_dialoglanguagechooser_title"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/java_dialoglanguagechooser_lang_english"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:id="@+id/checkBoxEnglish" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/java_dialoglanguagechooser_lang_bangla"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:id="@+id/checkBoxBangla" />

        <!--<CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/java_dialoglanguagechooser_lang_thai"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:id="@+id/checkBoxThai" />-->



    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/attachment_dialog_cancel"
            android:layout_margin="10dp"
            android:background="@drawable/btn_holder_homework"
            android:layout_weight="1"/>


        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/java_uihelper_ok"
            android:layout_margin="10dp"
            android:background="@drawable/btn_holder_homework"
            android:layout_weight="1"/>

    </LinearLayout>
</LinearLayout>
