<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_2"
    android:orientation="vertical"
    android:padding="10dip" >

    <EditText
        android:id="@+id/editText_foldername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/name_edit"
        android:hint="@string/create_fodler_dialog"
        android:padding="10dip"
        android:textColor="@color/hint_color"
        android:textColorHint="@color/hint_color"
        android:textSize="15sp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:textSize="12dip"
        android:visibility="gone"
        android:text="@string/dialog_folder_name_txt_error"
        android:textColor="@color/red" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_create"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:layout_weight="1"
            android:background="@drawable/red_btn"
            android:text="@string/dialog_folder_name_btn_create"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="3dip"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:layout_weight="1"
            android:background="@drawable/red_btn"
            android:text="@string/btn_cancel"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>