<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_3"
        android:orientation="horizontal"
        android:gravity="center" >

        <TextView
            android:id="@+id/tv_subject"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:paddingBottom="5dip"
            android:paddingLeft="2dip"
            android:paddingRight="2dip"
            android:paddingTop="5dip"
            android:text="@string/popup_layout_homework_assessment_result_txt_subject"
            android:textSize="13sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="@color/gray_2" />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="5dip"
            android:paddingLeft="2dip"
            android:paddingRight="2dip"
            android:paddingTop="5dip"
            android:text="@string/row_term_report_score"
            android:textSize="13sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="@color/gray_2" />

        <TextView
            android:id="@+id/tv_highest"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="5dip"
            android:paddingLeft="2dip"
            android:paddingRight="2dip"
            android:paddingTop="5dip"
            android:text="@string/row_term_report_highest"
            android:textSize="13sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="@color/gray_2" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="5dip"
            android:paddingLeft="2dip"
            android:paddingRight="2dip"
            android:paddingTop="5dip"
            android:text="@string/row_term_report_total"
            android:textSize="13sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="@color/gray_2" />

        <TextView
            android:id="@+id/tv_grade"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="5dip"
            android:paddingLeft="2dip"
            android:paddingRight="2dip"
            android:paddingTop="5dip"
            android:text="@string/row_term_report_grade"
            android:textSize="13sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="@color/gray_2" />

        <TextView
            android:id="@+id/txtView"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="5dip"
            android:paddingLeft="2dip"
            android:paddingRight="2dip"
            android:paddingTop="5dip"
            android:text="@string/row_term_report_action"
            android:textSize="13sp"
            android:textStyle="bold" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/gray_2" />

</LinearLayout>