<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip">
        
        <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/leave_rombus"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/icon"
            />
        
    <TextView
        android:id="@+id/dialog_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leave_application_diolog_layout_title"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:layout_toRightOf="@+id/icon" 
        android:layout_centerVertical="true"/>    
        
    </RelativeLayout>
    
    

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/red"/>
    
    
     <LinearLayout android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:orientation="horizontal"
        >
        
        <TextView android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:text="@string/leave_application_diolog_layout_name"
            android:layout_weight="0.3"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:gravity="right|center_vertical"
            android:layout_marginLeft="20dip"/>
        
        <TextView android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.7"
            android:textColor="@color/gray_1"
            android:textSize="16sp"
            android:layout_marginLeft="5dip"
            android:gravity="left|center_vertical"
            android:id="@+id/name_text"/>
        
    </LinearLayout>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:orientation="horizontal"
        >
        
        <TextView android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:text="@string/leave_application_diolog_layout_start_date"
            android:layout_weight="0.3"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:gravity="right|center_vertical"
            android:layout_marginLeft="20dip"/>
        
        <TextView android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.7"
            android:textColor="@color/gray_1"
            android:textSize="16sp"
            android:layout_marginLeft="5dip"
            android:gravity="left|center_vertical"
            android:id="@+id/start_date_text"/>
        
    </LinearLayout>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:orientation="horizontal"
        >
        
        <TextView android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:text="@string/leave_application_diolog_layout_end_date"
            android:layout_weight="0.3"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:gravity="right|center_vertical"
            android:layout_marginLeft="20dip"/>
        
        <TextView android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:textColor="@color/gray_1"
            android:textSize="16sp"
            android:layout_weight="0.7"
            android:layout_marginLeft="5dip"
            android:gravity="left|center_vertical"
            android:id="@+id/end_date_text"/>
        
    </LinearLayout>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        
        <TextView android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:text="@string/leave_application_diolog_layout_reason"
            android:layout_weight="0.3"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:gravity="right|center_vertical"
            android:layout_marginLeft="20dip"/>
        
        <TextView android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:textColor="@color/gray_1"
            android:textSize="16sp"
            android:layout_weight="0.7"
            android:layout_marginLeft="5dip"
            android:gravity="left|center_vertical"
            android:id="@+id/reason_text"/>
        
    </LinearLayout>

    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/red" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dialog_btn_deny"
            android:layout_width="100dip"
            android:layout_height="30dip"
            android:background="@drawable/btn_red_back"
            android:text="@string/popup_layout_meeting_status_btn_deny"
            android:textColor="@color/white"/>
        
        <Button
            android:id="@+id/dialog_btn_accept"
            android:layout_width="100dip"
            android:layout_height="30dip"
            android:background="@drawable/btn_red_back"
            
            android:text="@string/popup_layout_meeting_status_btn_accept"
            android:textColor="@color/white"
            android:layout_marginLeft="10dip"/>
    </LinearLayout>

</LinearLayout>